# HATCHERY

./: .gitignore  README.md  SPEC.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: FileSystemView.tsx  IOCPanel.tsx  LiveIndicator.tsx  NetworkPanel.tsx  ProcessTree.tsx  SampleUpload.tsx  Timeline.tsx  YARAResults.tsx
engine/: __init__.py  cli.py
engine/export/: __init__.py  mitre_map.py  report.py  stix.py
engine/fake_services/: __init__.py  dns_server.py  http_server.py  service_manager.py  smtp_server.py
engine/intake/: __init__.py  elf_analyzer.py  hasher.py  pe_analyzer.py  strings.py  uploader.py
engine/ioc/: __init__.py  extractor.py
engine/monitor/: __init__.py  event_stream.py  file_watcher.py  network_capture.py  strace_parser.py
engine/sandbox/: __init__.py  container.py  network.py  seccomp.json
engine/sandbox/docker/: Dockerfile  entrypoint.sh
engine/static/: __init__.py  capa_scanner.py  packer_detect.py  yara_scanner.py
engine/static/rules/hatchery/: anti_debug.yar  general.yar  network_c2.yar  packing.yar  sandbox_evasion.yar
samples/: README.md
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/db/: index.ts  schema.sql
server/src/routes/: analysis.ts  iocs.ts  report.ts  status.ts  submit.ts
tests/: test_ioc_extractor.py  test_strace_parser.py  test_string_extractor.py
